--- a/src/main/ui/src/app/register/register.component.html
+++ b/src/main/ui/src/app/register/register.component.html
@@ -83,7 +83,7 @@
                     Reset
                 </button>
             </div>
-            <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+            <div class="alert alert-warning" *ngIf="isSignUpFailed">
                 Signup failed!<br />{{ errorMessage }}
             </div>
             <div class="alert alert-success" *ngIf="isSuccessful">
