Corrected typo in board-user.component.html

--- a/src/main/ui/src/app/board-user/board-user.component.html
+++ b/src/main/ui/src/app/board-user/board-user.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 mrgnbtm">
-            <h1 style="font-weight: bold">Fibonnaci Spiral</h1>
+            <h1 style="font-weight: bold">Fibonacci Spiral</h1>
             <h6 style="margin-top: 20px">Matrix Properties</h6>
             <form [formGroup]="matrixForm" (ngSubmit)="onSubmit()">
                 <table class="form-Table">
